[project]
name = "skanishi-backend"
version = "0.1.0"
description = "Backend API for Skanishi"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16,<2.0",
    "asyncpg>=0.30,<1.0",
    "celery>=5.4.0,<6.0",
    "fastapi>=0.115,<1.0",
    "PyJWT>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "redis>=5.2,<7.0",
    "sse-starlette>=2.0,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "sqlmodel>=0.0.22,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
